--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
    <div class="main-content">
       {{>header}}
+      <p>This site was created by gagaduday. It uses data from mapbox.com and darksky.net</p>
       <img class="portrait" src="/img/thumb-fd17097df0a3e8be4541933de0e46459_612x0.png" />
    </div>
    {{>footer}}
