add search weather automatically

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,7 +15,8 @@
 
       <form>
          <input placeholder="Location" />
-         <button>Search</button>
+         <button class="manual-button">Search</button>
+         <button class="automatic-button">Get your weather automatically</button>
       </form>
 
       <p id='message-1'></p>
